Fix: now mod version matches file name.